--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -119,6 +119,7 @@ ol li, ul li {
     background-color: #f8f8f8;
     border: 1px solid #dfe1e3;
     border-radius: 2px;
+    overflow: hidden;
     code {
         color: @gray-4;
         padding: 0 2em; 
@@ -131,6 +132,7 @@ ol li, ul li {
     line-height: 1.7em;
     border: 1px solid #dfe1e3;
     border-radius: 2px;
+    overflow: hidden;
     code {
         color: @gray-4;
         padding: 0 2em; 
