Further design improvements to references and overlays, particularly around buttons

--- a/libs/modules/overlay.less
+++ b/libs/modules/overlay.less
@@ -94,7 +94,8 @@
 				&.removed {
 					background-color: @red-lightest;
 					a {
-						text-decoration: line-through;
+						//text-decoration: line-through;
+						color: @red;
 					}
 					button {
 						.btn-icon("\f0e2",@border:no-border);
