Fixed existing pages to exclude the sidebar

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -1,11 +1,11 @@
 block settings
 	- var title = "Citizens Advice elements guide"
+	- var sidebar = false
 
 extends ../template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		//{title: "Level 2", href: "2.html"}, 
 		{title: "Home"}])
 
 block content
