--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -69,8 +69,8 @@ html
 							h1.title__heading.js-ref
 								span.title__title #{title}
 						block content
-					nav.side-nav-beta
-						block sidebar
+
+					block sidebar
 				else
 					.title
 						h1.title__heading.js-ref
@@ -94,4 +94,5 @@ html
 							br
 							| Registered office: Citizens Advice, 3rd Floor North, 200 Aldersgate, London, EC1A 4HD
 							
+		script(src="../libs/javascript/advisor.js")
 		script(src="../libs/javascript/core.js")
