--- a/libs/jade/advisor.jade
+++ b/libs/jade/advisor.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Long form advice content page"
+	- var title = "Advisor content"
 	- var sidebar = true
 
 extends ../template/template.jade
@@ -7,7 +7,7 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"}, 
-		{title: "Long form"}])
+		{title: "Advisor"}])
 
 block sidebar
 	- var section = "Section title"
@@ -16,6 +16,12 @@ block sidebar
 		{title: "Sibling page 1", href: "long-form.html"},
 		{title: "Sibling page 2", href: "index.html"}],
 		0)
+
+	#advisorInline1--box.advisor--box
+		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+
+	#advisorInline1--box.advisor--box
+		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 
 block content
 	.title__subheading
@@ -58,11 +64,15 @@ block content
 					span.ref-heading__toggle.ref-heading__toggle--on
 						a.js-toggle-ref(href="#!") Added
 				h3 Example of content
-				p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+				p#advisorInline1
+					span#advisorInline1Button.inline--button
+					| Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore #[span#advisor1.advisor magna] aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 			section#step2
 				h2 Second use of &lt;h2&gt; in content
 				h3 Example of content
-				p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+				p#advisorInline2
+					span#advisorInline1Button.inline--button
+					| Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. #[span#advisor2.advisor Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.]
 			section#step3
 				h2 Third use of &lt;h2&gt; in content
 				h3 Example of content
