Removed needless div. from jade files

--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -9,10 +9,10 @@ block breadcrumbs
 		{title: "Home"}])
 
 block content
-	div.articleContent
+	.articleContent
 		p.p-lede This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.
-		div.flex-container
-			div.flex-col-1-1
+		.flex-container
+			.flex-col-1-1
 				h2 Contents
 				ul
 					li
