--- a/libs/jade/layout.jade
+++ b/libs/jade/layout.jade
@@ -10,82 +10,82 @@ block breadcrumbs
 		{title: "Layout"}])
 
 block content
-	div.articleContent
-		div.flex-container
-			div.col-md-8
+	.articleContent
+		.flex-container
+			.col-md-8
 				p The default page width is 1080px with a 12-column grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, #[a(href="#") improving cognition].
 				p The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed.
-		div.flex-container
-			div.flex-col-1-1
+		.flex-container
+			.flex-col-1-1
 				h3 Two Thirds (content first)
-			div.flex-col-2-3
-				div.example-box
+			.flex-col-2-3
+				.example-box
 					| 2/3
 					code flex-col-2-3
-			div.flex-col-1-3
-				div.example-box
+			.flex-col-1-3
+				.example-box
 					| 1/3
 					code flex-col-1-3
-		div.flex-container
-			div.flex-col-1-1
+		.flex-container
+			.flex-col-1-1
 				h3 Two Thirds (navigation first)
-			div.flex-col-1-3
-				div.example-box
+			.flex-col-1-3
+				.example-box
 					| 1/3
 					code flex-col-1-3
-			div.flex-col-2-3
-				div.example-box
+			.flex-col-2-3
+				.example-box
 					| 2/3
 					code flex-col-2-3
-		div.flex-container
-			div.flex-col-1-1
+		.flex-container
+			.flex-col-1-1
 				h3 One Quarter
-			div.flex-col-1-4
-				div.example-box
+			.flex-col-1-4
+				.example-box
 					| 1/4
 					code flex-col-1-4
-			div.flex-col-3-4
-				div.example-box
+			.flex-col-3-4
+				.example-box
 					| 3/4
 					code flex-col-3-4
-		div.flex-container
-			div.flex-col-1-1
+		.flex-container
+			.flex-col-1-1
 				h3 Full Width
-			div.flex-col-1-1
-				div.example-box
+			.flex-col-1-1
+				.example-box
 					| 1/1
 					code flex-col-1-1
-		div.flex-container
-			div.flex-col-1-1
+		.flex-container
+			.flex-col-1-1
 				h3 Thirds
-			div.flex-col-1-3
-				div.example-box
+			.flex-col-1-3
+				.example-box
 					| 1/3
 					code flex-col-1-3
-			div.flex-col-1-3
-				div.example-box
+			.flex-col-1-3
+				.example-box
 					| 1/3
 					code flex-col-1-3
-			div.flex-col-1-3
-				div.example-box
+			.flex-col-1-3
+				.example-box
 					| 1/3
 					code flex-col-1-3
-		div.flex-container
-			div.flex-col-1-1
+		.flex-container
+			.flex-col-1-1
 				h3 Quarters
-			div.flex-col-1-4
-				div.example-box
+			.flex-col-1-4
+				.example-box
 					| 1/4
 					code flex-col-1-4
-			div.flex-col-1-4
-				div.example-box
+			.flex-col-1-4
+				.example-box
 					| 1/4
 					code flex-col-1-4
-			div.flex-col-1-4
-				div.example-box
+			.flex-col-1-4
+				.example-box
 					| 1/4
 					code flex-col-1-4
-			div.flex-col-1-4
-				div.example-box
+			.flex-col-1-4
+				.example-box
 					| 1/4
 					code flex-col-1-4
