--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -23,6 +23,8 @@ block content
 								a(href="long-form.html") Long form content
 							li
 								a(href="toolbar.html") Content toolbar
+							li
+								a(href="advisor.html") Advisor content
 					li
 						a(href="tables.html") Tables
 					li Modals
