--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -36,12 +36,8 @@ html
 
 		.cookie-monster.hide-no-cookies.hide-no-js.no-print
 			.cookie-monster__content
-				div
-					p This site uses cookies.&nbsp; Find out more about #[a(href="#") our use of cookies].
-
-				button.button--blue.cookie-monster__close(data-action="close", type="button")
-					i.icon-cross
-					| Close
+				p This site uses cookies. Find out more about #[a(href="#") our use of cookies].
+				button.btn.cookie-monster__close(data-action="close", type="button") Close
 
 		header.main-header
 			.main-header__content.main-content
