Improved syntax around heading variable in template

--- a/libs/modules/cookie-monster.less
+++ b/libs/modules/cookie-monster.less
@@ -20,6 +20,7 @@
         overflow: hidden;
         p {
             margin: 0;
+            padding: 0 @box-spacing*7 0 @box-spacing/2;
             display: inline-block;
             .vertical-align(absolute);
         }
