--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -9,7 +9,9 @@ html
 		meta(name="keywords")
 		meta(name="description")
 
-		title Citizens Advice style guide – #{title}
+		title Citizens Advice style guide 
+			- if (typeof title !== "undefined")
+				| - #{title}
 
 		// Mobile Specific Metas
 		meta(content="width=device-width, initial-scale=1, maximum-scale=2.0", name="viewport")
