Renamed subheading to toolbar, and added new simple grid page

--- a/libs/jade/advisor.jade
+++ b/libs/jade/advisor.jade
@@ -24,7 +24,7 @@ block sidebar
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 
 block content
-	include ../template/title-subheading.jade
+	include ../template/toolbar.jade
 
 	.articleContent
 		div
