--- a/libs/jade/extent.jade
+++ b/libs/jade/extent.jade
@@ -18,7 +18,7 @@ block sidebar
 		0)
 
 block content
-	include ../template/title-subheading.jade
+	include ../template/toolbar.jade
 	
 	#simpleModal.modal
 			.extent-country-select
