--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -10,20 +10,22 @@ block content
 		.flex-container
 			.flex-col-1-1
 				h2 Contents
+				h3 Layout
 				ul
 					li
-						a(href="layout.html") Layout
-					li(style="list-style: none; display: inline")
-						ul
-							li
-								a(href="long-form.html") Long form content
-							li
-								a(href="toolbar.html") Content toolbar
-							li
-								a(href="advisor.html") Advisor content
+						a(href="layout.html") Grid layout
+					li
+						a(href="long-form.html") Long form content
+					li
+						a(href="toolbar.html") Content toolbar
+					li
+						a(href="advisor.html") Advisor content
+				h3 Website elements
+				ul
 					li
 						a(href="tables.html") Tables
-					li Modals
+					li 
+						h4 Modals
 					li(style="list-style: none; display: inline")
 						ul
 							li
