--- a/libs/jade/long-form.jade
+++ b/libs/jade/long-form.jade
@@ -18,7 +18,7 @@ block sidebar
 		0)
 
 block content
-	include ../template/title-subheading.jade
+	include ../template/toolbar.jade
 
 	.articleContent
 		div
