--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -112,7 +112,7 @@ ol li, ul li {
 // For code
 .example-box {
     color: #333;
-    padding: 20px;
+    padding: @box-spacing;
     margin: 1em 0 3em;
     font-family: monaco,monospace;
     line-height: 1.7em;
@@ -122,7 +122,7 @@ ol li, ul li {
     overflow: hidden;
     code {
         color: @gray-4;
-        padding: 0 2em; 
+        padding: 0 @box-spacing/2;
     }
 }
 .example-box-plain {
@@ -151,6 +151,18 @@ span.code {
     background-color: #f8f8f8;
     border: 1px solid #dfe1e3;
     border-radius: 2px;
+}
+
+.customcol {
+    &13 {
+        .col(1,3);
+    }
+    &49 {
+        .col(4,9);
+    }
+    &29 {
+        .col(2,9);
+    }
 }
 
 div[class*="callout"] code {
