Beginning to layout files correct in breadcrumbs. Fixed tables page

--- a/libs/jade/advisor.jade
+++ b/libs/jade/advisor.jade
@@ -6,8 +6,9 @@ extends ../template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"}, 
-		{title: "Advisor"}])
+		{title: "Home", href: "index.html"},
+		{title: "Layout"}, 
+		{title: "Advisor content"}])
 
 block sidebar
 	- var section = "Section title"
