--- a/libs/jade/layout.jade
+++ b/libs/jade/layout.jade
@@ -1,5 +1,5 @@
 block settings
-	- var title = "Layout"
+	- var title = "Grid layout"
 	- var sidebar = false
 
 extends ../template/template.jade
@@ -7,7 +7,8 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"}, 
-		{title: "Layout"}])
+		{title: "Layout"},
+		{title: "Grid layout"}])
 
 block content
 	.articleContent
