--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -7,19 +7,22 @@ block breadcrumbs
 block content
 	.articleContent
 		p.p-lede This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.
+		h2 Contents
 		.flex-container
-			.flex-col-1-1
-				h2 Contents
+			.flex-col-1-3
 				h3 Layout
 				ul
 					li
 						a(href="layout.html") Grid layout
+					li
+						a(href="new-grid.html") New grid layout
 					li
 						a(href="long-form.html") Long form content
 					li
 						a(href="toolbar.html") Content toolbar
 					li
 						a(href="advisor.html") Advisor content
+			.flex-col-1-3
 				h3 Website elements
 				ul
 					li
