--- a/libs/jade/long-form.jade
+++ b/libs/jade/long-form.jade
@@ -7,7 +7,8 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"}, 
-		{title: "Long form"}])
+		{title: "Layout"},
+		{title: "Long form content"}])
 
 block sidebar
 	- var section = "Section title"
