--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -10,12 +10,23 @@ block content
 		h2 Contents
 		.flex-container
 			.flex-col-1-3
-				h3 Layout
+				h3 Styles
 				ul
 					li
-						a(href="layout.html") Grid layout
+						a(href="typography.html") Typography
 					li
-						a(href="new-grid.html") New grid layout
+						a(href="colours.html") Colours
+			.flex-col-1-3
+				h3 Layout
+				ul
+					li 
+						h4 Grid
+					li(style="list-style: none; display: inline")
+						ul
+							li
+								a(href="layout.html") Grid layout
+							li
+								a(href="new-grid.html") New grid layout
 					li
 						a(href="long-form.html") Long form content
 					li
@@ -23,7 +34,7 @@ block content
 					li
 						a(href="advisor.html") Advisor content
 			.flex-col-1-3
-				h3 Website elements
+				h3 Elements
 				ul
 					li
 						a(href="tables.html") Tables
@@ -37,10 +48,6 @@ block content
 								a(href="overlay.html") Modal/Overlay
 							li
 								a(href="reference.html") Reference tool
-					li
-						a(href="typography.html") Typography
-					li
-						a(href="colours.html") Colours
 					li
 						a(href="callout.html") Callout
 					li
