Changed mixin syntax to use ; rather than , between declaring variables

--- a/libs/mixins/buttons.less
+++ b/libs/mixins/buttons.less
@@ -1,8 +1,8 @@
 // Button mixin – add styles to 'modules/buttons.less'
 
 .btn(
-        @btn-text: @heritage-blue, 
-        @btn-background: @aqua,
+        @btn-text: @heritage-blue;
+        @btn-background: @aqua;
         @btn-background-hover: darken(@btn-background, 10%) 
     ){
     cursor: pointer;
