--- a/libs/mixins/callout.less
+++ b/libs/mixins/callout.less
@@ -6,9 +6,9 @@
 
 // Creates a mixin for making callout styles, including their links
 .callout ( 
-		@callout-background: @gray-6,
-		@callout-headings: @text-color, 
-		@callout-text: @text-color, 
+		@callout-background: @gray-6;
+		@callout-headings: @text-color; 
+		@callout-text: @text-color; 
 		@callout-border: darken(@callout-background, 25%) 
 	){
 
