--- a/libs/mixins/revealable.less
+++ b/libs/mixins/revealable.less
@@ -5,8 +5,8 @@
  */
 
 .revealable (
-        @revealable-background: @heritage-blue-lighter,  
-        @revealable-heading: @text-color, 
+        @revealable-background: @heritage-blue-lighter;
+        @revealable-heading: @text-color;
         @revealable-border: darken(@revealable-background, 25%)
     ) {
 
