--- a/libs/template/template.jade
+++ b/libs/template/template.jade
@@ -21,8 +21,8 @@ html
 		meta(content="B53C5C20449FC2233D3862B4DBEDFA3E", name="msvalidate.01")
 
 		// Stylesheets
-		link(href="css/site.css", media="screen", rel="stylesheet")
-		link(href="css/print.css", media="print", rel="stylesheet")
+		link(href="css/site.css", rel="stylesheet")
+		//link(href="css/print.css", media="print", rel="stylesheet")
 		link(href="https://www.citizensadvice.org.uk/static/layout/favicon.ico", rel="shortcut icon")
 		link(href="https://www.citizensadvice.org.uk/static/images/apple-touch-icon.png", rel="apple-touch-icon")
 
