Added syntax highlighting to template, inside libs. Added new style for code below examples. Added code examples to forms. Reorganised index

--- a/libs/base/ie.less
+++ b/libs/base/ie.less
@@ -10,4 +10,11 @@
 	    border: 1px solid  @blue-navigation;
 	    border-top: 6px solid @blue-navigation;
 	}
+
+	.btn {
+		line-height: 2.5 !important;
+		&:after {
+			top: 12.5% !important;
+		}
+	}
 }
