--- a/libs/jade/grid.jade
+++ b/libs/jade/grid.jade
@@ -7,7 +7,8 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"}, 
-		{title: "Layout"},
+		{title: "Atoms", href: "index.html#atoms"},
+		{title: "Grid", href: "index.html#grid"},
 		{title: "Grid layout"}])
 
 block content
