--- a/libs/jade/tables.jade
+++ b/libs/jade/tables.jade
@@ -7,34 +7,32 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Website elements"},
+		{title: "Atoms", href: "index.html#atoms"}, 
 		{title: "Tables"}])
 
 block content
-	.articleContent
-		p.p-lede Tables
-		.flex-container
-			.flex-col-2-3
-				table(style="width:100%")
-					thead
-						tr
-							th(scope="col") th
-							th(scope="col") th
-							th(scope="col") th
-					tbody
-						tr
-							td td
-							td td
-							td td
-						tr
-							td td
-							td td
-							td td
-						tr
-							td td
-							td td
-							td td
-						tr
-							td td
-							td td
-							td td
+	.articleContent.row
+		.span8
+			table(style="width:100%")
+				thead
+					tr
+						th(scope="col") th
+						th(scope="col") th
+						th(scope="col") th
+				tbody
+					tr
+						td td
+						td td
+						td td
+					tr
+						td td
+						td td
+						td td
+					tr
+						td td
+						td td
+						td td
+					tr
+						td td
+						td td
+						td td
