--- a/libs/jade/typography.jade
+++ b/libs/jade/typography.jade
@@ -7,68 +7,67 @@ extends ../template/template.jade
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"},
-		{title: "Website elements"},
+		{title: "Atoms", href: "index.html#atoms"}, 
 		{title: "Typography"}])
 
 block content
-	.articleContent
-		.flex-container
-			.flex-col-2-3
-				p The font used is #[a(href="http://www.google.com/fonts/specimen/Open+Sans") Open Sans] a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using four of these.
-				p When calling in the font weights or any of the typographic styles, be sure to use the variable rather than the font weight directly.
-				p(style="font-weight: 400;") Open Sans 400 
-					span.code @font-weight-base
-				p(style="font-weight: 600;") Open Sans 600 
-					span.code @font-weight-bold
-				p(style="font-weight: 700;") Open Sans 700 
-					span.code @font-weight-bolder
-				p(style="font-weight: 800;") Open Sans 800 
-					span.code @font-weight-boldest
-				p Typographic styles for content specific pages. See #[a(href="#") content guidelines] for how to write content.
-				h1 h1 for page titles
-					span.code @font-size-h1
-				h2 h2 sub header, for section titles
-					span.code @font-size-h2
-				h3 h3 for headings within sections
-					span.code @font-size-h3
-				h4 h4
-					span.code @font-size-h4
-				h5 h5
-					span.code @font-size-h5
-				p.u-lede This is a lead paragraph of text. Only use one of these per page, or not at all. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-					span.code @u-lede
-				p This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
-				h2 Sub header, for introducing content sections
-				p This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-				h3 h3 header within sub header
-				p This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
-				h3 Links
-				ul
-					li This is a standard text #[a(href="#") with a link] and an external.
-					li This is a standard text #[a.a-external-link(href="#") with an external link].
-						span.codea-external-link</span>
-					li This is a standard text #[a.a-pdf-doc(href="#") with a link to a pdf document].
-						span.codea-pdf-doc</span>
-					li This is a standard text #[a.a-file-doc(href="#") with a link to a html or text file].
-						span.codea-file-doc</span>
-					li This is a standard text #[a.a-word-doc(href="#") with a link to a word document].
-						span.codea-word-doc</span>
-					li This is a standard text #[a.a-excel-doc(href="#") with a link to a excel document].
-						span.codea-excel-doc</span>
-				h3 Standard unordered list
-				ul
-					li Lorem ipsum dolor sit amet
-					li Lorem ipsum dolor sit amet
-					li(style="list-style: none; display: inline")
-						ul
-							li Lorem ipsum dolor sit amet
-							li Lorem ipsum dolor sit amet
-					li Lorem ipsum dolor sit amet
-				h3 Standard ordered list
-				ol
-					li Lorem ipsum dolor sit amet
-					li Lorem ipsum dolor sit
-						ol
-							li Lorem ipsum dolor sit amet
-							li Lorem ipsum dolor sit amet
-					li Lorem ipsum dolor sit amet
+	.articleContent.row
+		.span8
+			p The font used is #[a(href="http://www.google.com/fonts/specimen/Open+Sans") Open Sans] a sans font chosen for legibility and consistency in online and offline applications. The font comes in various weights, but by default we will be using four of these.
+			p When calling in the font weights or any of the typographic styles, be sure to use the variable rather than the font weight directly.
+			p(style="font-weight: 400;") Open Sans 400 
+				span.code @font-weight-base
+			p(style="font-weight: 600;") Open Sans 600 
+				span.code @font-weight-bold
+			p(style="font-weight: 700;") Open Sans 700 
+				span.code @font-weight-bolder
+			p(style="font-weight: 800;") Open Sans 800 
+				span.code @font-weight-boldest
+			p Typographic styles for content specific pages. See #[a(href="#") content guidelines] for how to write content.
+			h1 h1 for page titles
+				span.code @font-size-h1
+			h2 h2 sub header, for section titles
+				span.code @font-size-h2
+			h3 h3 for headings within sections
+				span.code @font-size-h3
+			h4 h4
+				span.code @font-size-h4
+			h5 h5
+				span.code @font-size-h5
+			p.u-lede This is a lead paragraph of text. Only use one of these per page, or not at all. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+				span.code @u-lede
+			p This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.
+			h2 Sub header, for introducing content sections
+			p This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			h3 h3 header within sub header
+			p This is a paragraph of text. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			h3 Links
+			ul
+				li This is a standard text #[a(href="#") with a link] and an external.
+				li This is a standard text #[a.a-external-link(href="#") with an external link].
+					span.codea-external-link</span>
+				li This is a standard text #[a.a-pdf-doc(href="#") with a link to a pdf document].
+					span.codea-pdf-doc</span>
+				li This is a standard text #[a.a-file-doc(href="#") with a link to a html or text file].
+					span.codea-file-doc</span>
+				li This is a standard text #[a.a-word-doc(href="#") with a link to a word document].
+					span.codea-word-doc</span>
+				li This is a standard text #[a.a-excel-doc(href="#") with a link to a excel document].
+					span.codea-excel-doc</span>
+			h3 Standard unordered list
+			ul
+				li Lorem ipsum dolor sit amet
+				li Lorem ipsum dolor sit amet
+				li(style="list-style: none; display: inline")
+					ul
+						li Lorem ipsum dolor sit amet
+						li Lorem ipsum dolor sit amet
+				li Lorem ipsum dolor sit amet
+			h3 Standard ordered list
+			ol
+				li Lorem ipsum dolor sit amet
+				li Lorem ipsum dolor sit
+					ol
+						li Lorem ipsum dolor sit amet
+						li Lorem ipsum dolor sit amet
+				li Lorem ipsum dolor sit amet
